--- a/mywebsite/static/css/style.css
+++ b/mywebsite/static/css/style.css
@@ -52,3 +52,12 @@ li {
 #About .container {
   padding-top: 7rem;
 }
+
+.icon-intren {
+  width: 50px;
+  background-color: red;
+}
+
+.asd {
+  background-color: red;
+}
